--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,3 +26,9 @@ pytest = "^8.4.1"
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_paths = ["src"]
+addopts = "-v --cov=dash_mcp_showcase --cov-report=html --cov-report=term-missing"
+python_files = "test_*.py"
