--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,19 +18,24 @@ jobs:
       with:
         python-version: '3.11'
     
-    - name: Cache pip dependencies
+    - name: Cache Poetry dependencies
       uses: actions/cache@v3
       with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+        path: ~/.cache/pypoetry
+        key: ${{ runner.os }}-poetry-${{ hashFiles('**/poetry.lock') }}
         restore-keys: |
-          ${{ runner.os }}-pip-
+          ${{ runner.os }}-poetry-
+    
+    - name: Install Poetry
+      run: |
+        curl -sSL https://install.python-poetry.org | python3 -
+        echo "$HOME/.local/bin" >> $GITHUB_PATH
     
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        pip install pytest pytest-cov flake8
+        poetry config virtualenvs.create false
+        poetry install --no-interaction
+        poetry add pytest pytest-cov flake8 --group dev
     
     - name: Lint with flake8
       run: |
