Update Google Cloud authentication and deployment URL in GitHub Actions workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -73,7 +73,8 @@ jobs:
     - name: Authenticate to Google Cloud
       uses: google-github-actions/auth@v2
       with:
-        credentials_json: ${{ secrets.GCP_SA_KEY }}
+        workload_identity_provider: 'projects/${{ secrets.GCP_PROJECT_NUMBER }}/locations/global/workloadIdentityPools/github-pool/providers/github-provider'
+        service_account: 'github-cicd@${{ secrets.GCP_PROJECT_ID }}.iam.gserviceaccount.com'
     
     - name: Set up Google Cloud SDK
       uses: google-github-actions/setup-gcloud@v2
@@ -92,8 +93,8 @@ jobs:
     
     - name: Show deployment URL
       run: |
-        echo "Application deployed to: https://${{ secrets.GCP_PROJECT_ID }}.nw.r.appspot.com"
-        gcloud app browse --no-launch-browser
+        echo "Application deployed to: https://dash-mcp-showcase-dot-${{ secrets.GCP_PROJECT_ID }}.nw.r.appspot.com"
+        gcloud app browse --service=dash-mcp-showcase --no-launch-browser
 
   notify:
     needs: [test, deploy]
